@@ -7,6 +7,7 @@ General
 * Creation of ZIP archives for media storage, with DICOMDIR
 * Support of index-only mode (using the "StoreDicom" option)
 * Plugins can implement a custom storage area
+* "/tools/lookup" URI to map DICOM UIDs to Orthanc identifiers
 
 Minor
 -----
